# PRSTA-project

./: .gitignore  Correlation_conso_elec_meteo_notebook.ipynb  README.md  clear_rte_data.py  main.py  notebook-corr_temp-reel_conso.ipynb  notebook.ipynb  pyproject.toml  scrap.py  scrap_meteofrance.py
data/rte/: conso_mix_RTE_2024.xls  conso_mix_RTE_2025.xls  conso_mix_consolidated.csv
